<resources>
    <string name="app_name">PMS</string>
    <string name="login_title">Parents Management Service</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="send_email">전송</string>
    <string name="loading">로딩중</string>
    <string name="please_email">이메일을 입력해주세요</string>
    <string name="please_password">비밀번호를 입력해주세요</string>
    <string name="please_password_again">비밀번호를 한번 더 입력해주세요</string>
    <string name="title_calendar">일정</string>
    <string name="title_meal">급식</string>
    <string name="title_notify">소식</string>
    <string name="title_info">소개</string>
    <string name="title_mypage">마이페이지</string>
    <string name="please_name">닉네임을 입력해주세요</string>
    <string name="ask_need_register">아직 계정이 없으신가요?</string>
    <string name="meal_picture">급식사진</string>
    <string name="intro_work">취업처 소개</string>
    <string name="intro_developer">개발자 소개</string>
    <string name="intro_club">동아리 소개</string>
    <string name="children_club">자녀의 동아리</string>
    <string name="developer_club">PMS 개발 동아리</string>
    <string name="intro_main_dms">대마고의 자랑거리를 소개합니다</string>
    <string name="save_login_info">로그인정보 저장</string>
    <string name="school_notify">학교소식</string>
    <string name="pms">PMS</string>
    <string name="notify_subtitle">는 학교생활의 전반적인 정보를 제공합니다</string>
    <string name="photo_album">포토앨법</string>
    <string name="notice">공지사항</string>
    <string name="home_notice">가정통신문</string>
    <string name="please_search_notice">검색할 공지 제목을 입력하세요</string>
    <string name="show_file">미리보기</string>
    <string name="search_home_notice">검색할 가정통신문 제목을 입력하세요</string>
    <string name="intro_detail_club">동아리 소개</string>
    <string name="intro_detail_member">동아리 멤버</string>
    <string name="point_content">상/벌점 내역</string>
    <string name="check_student_code">자녀확인 코드를 입력해주세요</string>
    <string name="cancel">취소</string>
    <string name="pass">확인</string>
    <string name="add_student">학생을 추가해주세요</string>
    <string name="company_detail">취업처 소개</string>
    <string name="wait_company">아직 준비중 입니다</string>
    <string name="introduce_company_detail">대마고의 학생들이 취업한 회사를 소개합니다</string>
    <string name="introduce_club_detail">대마고의 동아리를 소개합니다</string>
    <string name="introduce_developer_detail">PMS의 개발자를 소개합니다</string>
    <string name="please_comment">댓글을 입력해주세요</string>
    <string name="outing_content">외출내역</string>
    <string name="plus_point">상점</string>
    <string name="minus_point">벌점</string>
    <string name="complete">완료</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="help">도움말</string>
    <string name="go_home">의무귀가</string>
    <string name="vacations">여름방학,겨울방학</string>
    <string name="tests">중간고사,기말고사</string>
    <string name="etc_event">기타일정</string>
    <string name="rest_day">휴일</string>
    <string name="selected_date">선택된날짜</string>
    <string name="today">오늘</string>
    <string name="announce">안내</string>
    <string name="no">아니요</string>
    <string name="download">다운로드</string>
    <string name="ask_download">공지사항,가정통신문에 탑재되어있는 첨부파일중 한글파일을 보기 위해서는 한글파일뷰어가 필요합니다.한글파일뷰어를 다운로드 하시겠습니까?</string>
    <string name="new_nick">새로운 닉네임을 입력해주세요</string>
    <string name="week_meal">주말급식 신청 여부</string>
    <string name="this_week_condition">이번주 잔류 상태</string>
    <string name="check_outing">외출내역 보기</string>
    <string name="change_pw">비밀번호 변경</string>
    <string name="log_out">로그아웃</string>
    <string name="pre_password">현재 비밀번호</string>
    <string name="please_pre_password">현재 비밀번호를 입력해주세요</string>
    <string name="new_password">새 비밀번호</string>
    <string name="please_new_password">변경할 비밀번호를 입력해주세요</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="please_check_password">변경한 비밀번호를 확인해주세요</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="check_logout">로그아웃 하시겠습니까?</string>
    <string name="please_check_code">본인확인코드를 입력해주세요</string>
    <string name="no_outing">외출내역이 없습니다</string>
    <string name="welcome">이메일을 확인해주세요</string>
    <string name="welcome_comment">계정 활성화를 위한 이메일을\n 작성하신 이메일 주소로 전송해드렸습니다.\n 계정 활성화 이후에 로그인이 가능합니다.</string>
    <string name="register">회원가입</string>
    <string name="ask_lost_password">비밀번호를 잃어버리셨나요?</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="loading_events">\n일정을 읽어오는중입니다…\n</string>
    <string name="empty_event">\n일정이 없습니다\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_password_comment">이메일주소로 새 비밀번호 확인 메일이 전송됩니다. 해당메일에는 새 비밀번호를 확인할 수 있는 링크가 있습니다. 링크를 클릭해 새 비밀번호를 확인하세요.\n(링크는 메일전송후 30분동안만 유효합니다)</string>
    <string name="change_password_comment">비밀번호 찾기이후 5분안에 들어오셨다면 임시비밀번호가 자동으로 입력되어있습니다.</string>

    <string name="click_to_show_picture">터치하여 급식사진보기</string>
    <string name="click_to_show_text">터치하여 급식표보기</string>
</resources>