<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.dms.pmsandroid.feature.introduce.viewmodel.MainIntroduceViewModel"
            />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.introduce.ui.fragment.IntroduceFragment">


        <TextView
            android:id="@+id/main_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/nanumsquareextrabold"
            android:text="@string/title_info"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/main_tilte2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nanumsquareregular"
            android:text="@string/intro_main_dms"
            android:textColor="#4C75B2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_title_tv" />

        <ImageView
            android:id="@+id/intro_club_btn"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/box3"
            app:layout_constraintBottom_toTopOf="@+id/intro_work_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_tilte2_tv" />

        <ImageView
            android:id="@+id/intro_work_btn"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/box3"
            app:layout_constraintBottom_toTopOf="@+id/intro_dev_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intro_club_btn" />

        <ImageView
            android:id="@+id/intro_dev_btn"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/box3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intro_work_btn" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/introduce_developer_detail"
            android:textColor="#6C6C6C"
            android:fontFamily="@font/nanumsquareregular"
            android:textSize="@dimen/intro_second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.342"
            app:layout_constraintStart_toStartOf="@+id/intro_club_btn"
            app:layout_constraintTop_toBottomOf="@+id/choice_dev_tv" />

        <TextView
            android:id="@+id/choice_club_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/intro_club"
            android:textSize="@dimen/intro_main"
            android:fontFamily="@font/nanumsquarebold"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.29"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/intro_club_btn" />

        <TextView
            android:id="@+id/choice_work_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/intro_work"
            android:fontFamily="@font/nanumsquarebold"
            android:textSize="@dimen/intro_main"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.291"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/intro_work_btn" />

        <TextView
            android:id="@+id/choice_dev_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/intro_developer"
            android:fontFamily="@font/nanumsquarebold"
            android:textSize="@dimen/intro_main"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.291"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/intro_dev_btn" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/introduce_club_detail"
            android:textColor="#6C6C6C"
            android:fontFamily="@font/nanumsquareregular"
            android:textSize="@dimen/intro_second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.367"
            app:layout_constraintStart_toStartOf="@+id/intro_club_btn"
            app:layout_constraintTop_toBottomOf="@+id/choice_club_tv" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/introduce_company_detail"
            android:textColor="#6C6C6C"
            android:fontFamily="@font/nanumsquareregular"
            android:textSize="@dimen/intro_second"
            app:layout_constraintEnd_toEndOf="@+id/intro_work_btn"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choice_work_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>