<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="com.dms.pmsandroid.feature.mypage.viewmodel.MyPageViewModel">
        </variable>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/changeName_dialog"
        android:layout_width="350dp"
        android:layout_height="229dp"
        android:background="@drawable/radius_dialog_white"
        android:paddingHorizontal="16dp"
        android:paddingBottom="8dp">

        <View
            android:id="@+id/view2"
            android:layout_width="280dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/border_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkcode_et" />

        <EditText
            android:id="@+id/checkcode_et"
            android:layout_width="287dp"
            android:layout_height="52dp"
            android:layout_marginTop="60dp"
            android:background="@null"
            android:ems="6"
            android:fontFamily="@font/nanumsquareregular"
            android:gravity="center"
            android:hint="@string/new_nick"
            android:inputType="text"
            android:maxLength="13"
            android:singleLine="true"
            android:text="@={vm.newName}"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/confirm_tv"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/nanumsquareregular"
            android:gravity="center"
            android:onClick="@{()->vm.studentCertification()}"
            android:text="@string/pass"
            android:textColor="@color/blue"
            android:textSize="@dimen/dialog_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkcode_et"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/cancle_tv"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nanumsquareregular"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="@dimen/dialog_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkcode_et"
            app:layout_constraintVertical_bias="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>