<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.mypage.ui.activity.ChangePasswordActivity">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="@dimen/title_bar_size"
            android:background="@color/gray_100"
            android:fontFamily="@font/nanumsquarebold"
            android:gravity="center"
            android:text="비밀번호 변경"
            android:textColor="@color/black"
            android:textSize="@dimen/title_bar_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@id/title_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

        <TextView
            android:id="@+id/change_pw_pre_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nanumsquarebold"
            android:text="@string/pre_password"
            android:textColor="@color/blue"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_tv" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/change_pw_pre_password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/please_pre_password"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_pw_pre_password_tv" />

        <TextView
            android:id="@+id/change_pw_password_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nanumsquarebold"
            android:text="@string/new_password"
            android:textColor="@color/blue"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_pw_pre_password_et" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
